[Enc] Support static linking with musl
Summary: Native-image doesn't suport compiling musl based static
library. We loose this restriction in this commit.
But we only need native-image to complie the relocatable file (the .o file),
and the static linking is done by ourselves.

Test Plan: all tests pass

Reviewers: lei.yul, jeffery.wsj, sanhong.lsh

Issue: https://aone.alibaba-inc.com/task/41423615

CR:
https://code.aone.alibaba-inc.com/java-tee/JavaEnclave/codereview/8660164